# latte

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
latte/: __init__.py  hydra_utils.py  ksg.py
latte/config/: dsprites_factors.yaml  random_lines.yaml
latte/dataset/: cars3d.py  dsprites.py  morphoMNIST.py  shapes3d.py  synthetic.py  utils.py
latte/direction/: api.py  common.py  linear_regression.py  metrics.py  optimization.py  random.py
latte/evaluation/: representation_similarity_measures.py
latte/manifolds/: utils.py
latte/metrics/: mig.py
latte/mine/: callbacks.py  datasets.py  estimation.py  mine.py
latte/models/: callbacks.py  datamodules.py  datasets.py  layers.py  mine.py  subspace_orientation.py  utils.py  vae.py
latte/models/benchmarks/: celeba.py  conv_models.py  dsprites.py
latte/models/cca/: estimation.py
latte/models/club/: club.py
latte/models/linear_regression/: estimation.py
latte/models/mist/: estimation.py  mist.py  supervised_mist.py
latte/models/probabilistic_pca/: evaluation.py  orientation.py  orientator.py  probabilistic_pca.py
latte/models/rlace/: estimation.py  rlace.py
latte/models/vae/: utils.py
latte/modules/: callbacks.py  layers.py
latte/modules/data/: datamodules.py
latte/scripts/: dsprites_pca_fa.py  linear_projections.py
latte/tools/: model_comparison.py  space_evaluation.py  subspace_search.py
latte/utils/: evaluation.py  ksg_estimator.py  space_evaluation.py  subspaces.py  utils.py  visualisation.py
latte/utils/visualisation/: datasets.py  images.py  latent_spaces.py  metrics.py  visualisation.py
scripts/: compare_vae_image_representations.py  convert_celeba_to_numpy.py  create_dataset_split.py  download.py  dsprites_pca_fa.py  dsprites_vae.py  experiment_1.py  experiment_1_pPCA.py  find_vae_image_representation_subspaces.py  linear_projections.py  manifold_mine_synthetic_nonlinear_factors.py  mist_benchmark_images.py  mist_compare_representations.py  mist_dSprites.py  mist_nonlinear_subspace.py  pca_dSprites.py  train_pythae_vae.py
src/latte/dataset/: cars3d.py  celeba.py  shapes3d.py
tests/: test_direction.py  test_ksg.py  test_mine.py
tests/direction/: conftest.py  test_linear_regression.py  test_metrics.py  test_optimization.py  test_random.py
tests/mine/: test_mine.py  test_mine_manifold.py
tests/ppca/: test_orientation.py  test_ppca.py
tests/subspace_search/: test_cca.py  test_linear_regression_subspace_search.py  test_mist.py
tests/utils/: test_evaluation.py  test_manifold_util.py
(+21 files in other folders)
