[metadata]
name = latte
version = 0.0.1
platform = any
url = https://github.com/BoevaLab/latte
description = Latent spaces analysis
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = latte
python requires = >= 3.8
install_requires =
    # TODO (Anej): Investigate if 'attrs' needed
    attrs
    coloredlogs
    geoopt @ git+https://github.com/geoopt/geoopt.git
    h5py
    hydra-core
    nevergrad
    numpy
    omegaconf
    pandas
    # TODO(Pawel): Temporary pin on protobuf
    # as the new release breaks many pipelines
    protobuf~=3.19.0
    pytorch_lightning
    scikit-image
    scikit-learn
    scipy
    toml
    torch


[options.extras_require]
test =
    pytest
    pytest-cov

[pytype]
inputs =
    latte
    scripts
    tests
disable=
    import-error
